--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,19 @@
+@media screen and (max-width: 769px) {
+    .logo {
+        margin-left: 7rem;
+    }
+
+    .logoimg {
+        width: 85%;
+        display: flex;
+    }
+
+    .soc-icons {
+        font-size: 2rem;
+        margin-top: 1rem;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .header-menu {
         display: none;
@@ -7,8 +23,32 @@
         flex-direction: column;
         width: 100%;
     }
+
     .hamburger {
         display: block;
+    }
+}
+
+@media screen and (max-width: 415px) {
+
+    .soc-icons {
+        display: none;
+    }
+    .logo {
+        margin-left: 0;
+        margin: 1rem;
+    }
+
+    .logoimg {
+        width: 90%;
+    }
+
+    .hamburger {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: .5rem;
+        justify-content: center;
+        align-items: center;
     }
 
 }
