--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,9 @@ body {
     
 }
 
+
 .header-menu li a {
-    display: in;
+    display: inline-block;
     padding: 0rem 1rem;
     font-weight: 500;
     font-size: 1.1rem;
