--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,9 @@ body {
 /* Styling footer */
 
 .grid-footer {
-    background-color: peachpuff;
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
 }
 
 .header-menu {
@@ -136,7 +138,7 @@ a {
 }
 .about {
     height: 40rem;
-    background-color: lightpink;
+    background-color: lavenderblush;
 }
 .projects {
     height: 40rem;
