--- a/slider.css
+++ b/slider.css
@@ -4,8 +4,9 @@ body {
 
 .slideshow-container {
     position: relative;
-    width: 100%;
-    height: 35rem;
+    width: 40%;
+    height: auto;
+
 }
 
 .slideshow-container > img {
@@ -13,11 +14,12 @@ body {
     left: 0;
     top: 0;
     width: 100%;
-    height: 35rem;
+    height: auto;
     opacity: 0;
     transition: opacity 3s;
     object-fit: cover;
     object-position: center;
+    border-radius: .2rem;
 }
 
 .slideshow-container .show {
