--- a/styles.css
+++ b/styles.css
@@ -49,12 +49,29 @@ body {
     display: flex;
     flex-direction: column;
 }
+.hero-container {
+    display: flex;
+    background-color: #75c097;
+    height: 25rem;
+    position: relative;
+  }
+  
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
 
 /* Styling footer */
 
 .grid-footer {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     margin: 1rem;
 }
 
@@ -133,6 +150,10 @@ a {
 }
 
 /* Website content */
+h1 {
+    font-size: 3.5rem;
+}
+
 h2, p, h3 {
     color: #313131;
 }
@@ -155,6 +176,7 @@ h2, p, h3 {
 .about-box {
     display: flex;
     flex-direction: row;
+    height: 35rem;
 }
 
 .about-text {
@@ -179,8 +201,12 @@ h2, p, h3 {
 }
 
 /* Contact section */
-.contact {
+.contact-socicons {
 
+}
+.icons-contact {
+    font-size: 3rem;
+    color: #61a07d;
 }
 
 /* Back to top button styling  */
