--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     font-family: 'Inter', sans-serif;
     height: 100%;
-    background-image: url(./images/greenbg1.png);
+    background-image: url("../images/greenbg1.png");
     background-size: 100%;
     background-position: center;
     background-repeat: repeat;
